--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -31,7 +31,7 @@
       .text-left.w-full
         .h-28
           .p-1.underline.font-semibold.hover:no-underline
-            = link_to "#{lottery.name}", lottery_path(lottery)
+            = link_to lottery.name.to_s, lottery_path(lottery)
           - lottery.prizes.first(LotteriesHelper::DISPLAY_LIMIT).each_with_index do |prize, index|
             p.my-2
               = index == lottery.prizes.count - 1 ? "#{prize.name}の抽選会" : prize.name
