--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,13 +1,12 @@
 footer
-  .h-full.border-t.border-zinc-300.text-center.mt-6.py-3.text-zinc-500.text-sm
-    .flex.justify-center
-      = link_to 'https://github.com/OdenTakashi/SmartLottery'
-        i.fa-brands.fa-github.fa-xl.hover:text-zinc-600
-      .ml-4.hover:underline
-        = link_to '利用規約', terms_path
-      .ml-2
-        | |
-      .ml-2.hover:underline
-        = link_to 'プライバシーポリシー', privacy_policy_path
-    .mt-3
-      | © 2023 | odentakashi. All Rights Reserved.
+  .h-full.border-t.border-zinc-300.text-center.py-3.text-zinc-500.text-sm
+    .my-6
+      .flex.justify-center
+        = link_to 'https://github.com/OdenTakashi/SmartLottery'
+          i.fa-brands.fa-github.fa-xl.hover:text-zinc-600
+        .ml-6.shrink-0.hover:underline
+          = link_to '利用規約', terms_path
+        .ml-4.hover:underline
+          = link_to 'プライバシーポリシー', privacy_policy_path
+      .mt-3
+        | © 2023 odentakashi. All Rights Reserved.
