スマホ時の余白を追加

--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -19,7 +19,7 @@
     = button_to '新規作成', new_lottery_path, method: 'get', class: 'bg-lime-600 font-bold w-36 h-10 m-auto text-white rounded flex items-center justify-center hover:bg-lime-700'
 
 - @lotteries.each do |lottery|
-  .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-full.text-zinc-800.md:w-3/6
+  .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-11/12.text-zinc-800.md:w-3/6
     .flex.p-2
       .w-14.mx-2.my-2.shrink-0.text-center.text-white
         - if closed?(lottery)
@@ -38,7 +38,7 @@
           - if extra_prizes_count(lottery).positive?
             p.my-2
               = "その他#{extra_prizes_count(lottery)}つの賞品の抽選会"
-        .text-sm.text-zinc-400.mt-3.md:flex
+        .text-xs.text-zinc-400.mt-3.md:flex.md:text-sm
           div
             =  "締め切り日時: #{l(lottery.deadline.end_of_day)}"
           .md:ml-2
