--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -29,15 +29,16 @@
           .bg-indigo-500.rounded-full.text-xs.h-4
             | 開催中
       .text-left.w-full
-        .h-32.text-zinc-500
-          .p-1.underline.underline-offset-4.font-semibold.text-zinc-600.hover:no-underline
+        .text-zinc-500
+          .mb-3.p-1.underline.underline-offset-4.font-semibold.text-zinc-600.hover:no-underline
             = link_to lottery.name.to_s, lottery_path(lottery)
-          - lottery.prizes.first(LotteriesHelper::DISPLAY_LIMIT).each_with_index do |prize, index|
-            p.my-2
-              = prize.name
-          - if extra_prizes_count(lottery).positive?
-            p.my-2
-              = "その他#{extra_prizes_count(lottery)}つの賞品"
+          - lottery.prizes.each do |prize|
+            .flex
+              .w-1/2.truncate.md:w-3/5
+                = prize.name
+              - if lottery_executed?(lottery)
+                .ml-2.text-xs.md:text-sm
+                  = "当選者数: #{prize.entries.size}人"
         .text-xs.text-zinc-400.mt-3.md:flex.md:text-sm
           div
             =  "締め切り日時: #{l(lottery.deadline.end_of_day)}"
