--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -8,9 +8,9 @@
       input type='hidden' value=new_lottery_entry_url(@lottery) readonly='readonly' data-clipboard-target='source'
       .text-center
         button.w-64.font-semibold.h-10.rounded.py-2.px-2.m-auto.border.border-zinc-400.hover:border-zinc-900 data-action='clipboard#copy' data-clipboard-target='copyButton'
-          | 応募フォームのURLをコピーする
-        p.mt-2.text-sm.text-zinc-600
-          | 応募フォームのURLを希望者に渡し応募してもらいましょう。
+          | 応募フォームのURLをコピー
+        p.mt-2.text-xs.text-zinc-600.md:text-sm
+          | 応募希望者にフォームのURLを共有して応募してもらいましょう。
   == render @lottery
 
   .mx-2.mt-6
