--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -1,13 +1,13 @@
 .m-auto.mt-10
-  .font-bold.text-zinc-800
+  .font-bold.text-zinc-800.text-lg
     = Lottery.human_attribute_name(:deadline)
   .mt-3
     = l(lottery.deadline.end_of_day)
-  .font-bold.mt-3.text-zinc-800
+  .font-bold.mt-6.text-zinc-800.text-lg
     = Lottery.human_attribute_name(:description)
   .mt-3
     = lottery.description
-  .font-bold.mt-3.text-zinc-800
+  .font-bold.mt-6.text-zinc-800.text-lg
     | 応募フォームオプション
   .flex.items-center.mt-3
     input type='checkbox' value='' class='mr-3 text-blue-699 bg-gray-100 border-gray-300 rounded' checked=lottery.name_field_enabled disabled='true'
