--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -15,7 +15,7 @@
     .mt-6
       = form.label :deadline, style: 'display: block', class: 'text-zinc-800 font-semibold'
       p.mt-1.text-xs.text-zinc-500
-        | ※ 抽選は指定した日付の翌日01:00時に行われます
+        | 抽選は指定した日付の翌日01:00時に行われます
         br
         | (例: X月1日指定の場合、X月2日 01:00時に抽選実行)
       = form.date_field :deadline, class: 'mt-2 rounded border border-gray-200 w-80', required: true
@@ -28,18 +28,18 @@
       .font-semibold.text-zinc-800
         | 応募フォームオプション
       p.mt-1.text-xs.text-zinc-500
-        | ※ Eメール入力欄は必須入力項目として追加されます
+        | Eメール入力欄は必須入力項目として追加されます
 
     .mt-2
       = form.label :name_field_enabled, style: 'display: block', class: 'text-zinc-800'
       p.mt-1.text-xs.text-zinc-500
-        | ※ 名前入力欄が必須入力項目として追加されます
+        | 名前入力欄が必須入力項目として追加されます
       = form.check_box :name_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
     .mt-2
       = form.label :note_field_enabled, style: 'display: block', class: 'text-zinc-800'
       p.mt-1.text-xs.text-zinc-500
-        | ※ 備考入力欄が任意入力項目として追加されます
+        | 備考入力欄が任意入力項目として追加されます
       = form.check_box :note_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
     .prizes.mt-3
