--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -24,25 +24,27 @@
       = form.label :description, style: 'display: block', class: 'text-zinc-800 font-semibold'
       = form.text_area :description, placeholder: description_template, class: 'mt-2 rounded border border-gray-200 h-32 w-full placeholder-gray-300 text-sm', required: true
 
-    .mt-3
+    .mt-6
       .font-semibold.text-zinc-800
         | 応募フォームオプション
       p.mt-1.text-xs.text-zinc-500
         | Eメール入力欄は必須入力項目として追加されます
 
-    .mt-2
-      = form.label :name_field_enabled, style: 'display: block', class: 'text-zinc-800'
+    .mt-3
+      .flex
+        = form.check_box :name_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
+        = form.label :name_field_enabled, style: 'display: block', class: 'cursor-pointer text-zinc-800'
       p.mt-1.text-xs.text-zinc-500
         | 名前入力欄が必須入力項目として追加されます
-      = form.check_box :name_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
-    .mt-2
-      = form.label :note_field_enabled, style: 'display: block', class: 'text-zinc-800'
+    .mt-6
+      .flex
+        = form.check_box :note_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
+        = form.label :note_field_enabled, style: 'display: block', class: 'cursor-pointer text-zinc-800'
       p.mt-1.text-xs.text-zinc-500
         | 備考入力欄が任意入力項目として追加されます
-      = form.check_box :note_field_enabled, class: 'cursor-pointer mt-1 text-blue-699 bg-gray-100 border-gray-300 rounded'
 
-    .prizes.mt-3
+    .prizes.mt-6
       = form.fields_for :prizes do |prize|
         = render 'prize_fields', f: prize
 
