--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@ html
     = display_meta_tags(default_meta_tags)
     script src='https://kit.fontawesome.com/66472dd369.js' crossorigin='anonymous'
   body.bg-gray-200.flex.flex-col.min-h-screen
-    - if user_signed_in? || entry_form?
+    - if user_signed_in? && not_entry_form?
       nav.nav-link.flex.justify-between.bg-indigo-500.p-2
         .flex.flex-shrink-0.text-white.align-middle.md:mx-6
           = link_to image_tag('logo.png'), root_path
