ロゴ変更に伴い、ボタンの色を修正

--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -45,7 +45,7 @@
 
         <div class="mb-4 flex justify-center">
             <%= f.submit "変更する",
-                          class: "button cursor-pointer bg-lime-600 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded focus:outline-none text-sm"
+                          class: "button cursor-pointer bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none text-sm"
             %>
         </div>
 
