--- a/app/views/lotteries/show.html.slim
+++ b/app/views/lotteries/show.html.slim
@@ -22,7 +22,7 @@
           = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm'
     - else
       .flex.justify-center.items-end
-        = link_to '編集する', edit_lottery_path(@lottery), method: 'get', class: 'bg-lime-600 font-bold h-10 text-white rounded p-2 text-center w-1/3 hover:bg-lime-700 md:w-1/5'
+        = link_to '編集する', edit_lottery_path(@lottery), method: 'get', class: 'bg-blue-800 mr-3 font-bold h-10 text-white rounded p-2 text-center w-1/3 hover:bg-blue-900 md:w-1/5'
         .mt-6.mx-2
           = button_to '削除する', @lottery, method: :delete, class: 'underline text-sm hover:no-underline'
     .mt-6
