--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -24,7 +24,7 @@
 
         <div class="mb-4">
             <%= f.submit "パスワードの再設定方法を送信する",
-                         class: "button cursor-pointer bg-lime-600 hover:bg-lime-700 text-white font-bold py-2 px-4 rounded focus:outline-none w-full text-sm" %>
+                         class: "button cursor-pointer bg-blue-800 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded focus:outline-none w-full text-sm" %>
         </div>
 
         <%= render "users/shared/links" %>
