--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -45,7 +45,7 @@
     </div>
 
     <div class="actions flex justify-center">
-      <%= f.submit '更新', class: "button cursor-pointer bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4 rounded" %>
+      <%= f.submit '更新', class: "button cursor-pointer bg-blue-800 hover:bg-blue-900 font-bold text-white focus:outline-none py-2 px-4 rounded" %>
     </div>
   <% end %>
 
