--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -43,7 +43,7 @@
     <div class="mb-2 flex justify-center">
       <%= f.submit "登録する",
         data: { turbo: 'false' },
-        class: "cursor-pointer button rounded bg-lime-600 hover:bg-lime-700 font-bold text-white focus:outline-none py-2 px-4"
+        class: "cursor-pointer button rounded bg-blue-800 hover:bg-blue-900 font-bold text-white focus:outline-none py-2 px-4"
       %>
     </div>
 
