--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
     = favicon_link_tag 'android-touch-icon.png', rel: 'android-touch-icon', sizes: '192x192', type: 'image/png'
     = display_meta_tags(default_meta_tags)
     script src='https://kit.fontawesome.com/66472dd369.js' crossorigin='anonymous'
-  body.bg-gray-200.flex.flex-col.min-h-screen
+  body.flex.flex-col.min-h-screen
     - if user_signed_in? && not_entry_form?
       nav.nav-link.flex.justify-between.p-2
         .flex.flex-shrink-0.align-middle.font-serif.text-indigo-950.text-2xl.md:mx-6
