--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -10,16 +10,16 @@
   .font-bold.mt-6.text-zinc-800.text-lg
     | 応募フォームオプション
   .flex.items-center.mt-3
-    input type='checkbox' value='' class='mr-3 text-blue-699 bg-gray-100 border-gray-300 rounded' checked=lottery.name_field_enabled disabled='true'
+    input type='checkbox' value='' class='mr-3 text-blue-699 border-gray-300 rounded' checked=lottery.name_field_enabled disabled='true'
     label.text-zinc-800
       = Lottery.human_attribute_name(:name_field_enabled)
   .flex.items-center.mt-1
-    input type='checkbox' class='mr-3 text-blue-699 bg-gray-100 border-gray-300 rounded' checked=lottery.note_field_enabled disabled='true'
+    input type='checkbox' class='mr-3 text-blue-699 border-gray-300 rounded' checked=lottery.note_field_enabled disabled='true'
     label.text-zinc-800
       = Lottery.human_attribute_name(:note_field_enabled)
 
   - lottery.prizes.each do |prize|
-    .bg-stone-100.border.border-gray.rounded.mt-5.p-3.text-zinc-800.text-sm.md:text-base
+    .border.border-gray.rounded.mt-5.p-3.text-zinc-800.text-sm.md:text-base
       div
         .font-bold.text-lg
           = prize.name
