--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -10,7 +10,7 @@
                  url: password_path(resource_name),
                  html: {
                          method: :post,
-                         class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded"
+                         class: "border border-gray mb-4 px-8 pt-6 pb-8 rounded"
                  }) do |f| %>
 
         <%= render "users/shared/error_messages", resource: resource %>
