--- a/app/views/lotteries/index.html.slim
+++ b/app/views/lotteries/index.html.slim
@@ -19,7 +19,7 @@
     = button_to '新規作成', new_lottery_path, method: 'get', class: 'bg-blue-800 font-bold w-36 h-10 m-auto text-white rounded flex items-center justify-center hover:bg-blue-900'
 
 - @lotteries.each do |lottery|
-  .bg-stone-100.m-auto.border.border-gray.rounded.mt-6.w-11/12.text-zinc-800.md:w-3/6
+  .m-auto.border.border-gray.rounded.mt-6.w-11/12.text-zinc-800.md:w-3/6
     .flex.p-3
       .w-14.mx-2.my-2.shrink-0.text-center.text-white
         - if closed?(lottery)
