--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -4,50 +4,52 @@
   <h1 class="mb-6 text-center text-2xl text-gray-700 font-semibold">登録情報変更</h1>
 
   <%= form_for(resource,
-                as: resource_name,
-                url: registration_path(resource_name),
-                html: {
-                  method: :put,
-                  class: "bg-white mb-6 px-8 pt-6 pb-8 rounded"
-                }
-        ) do |f| %>
+    as: resource_name,
+    url: registration_path(resource_name),
+    html: {
+      method: :put,
+      class: "bg-white mb-6 px-8 pt-6 pb-8 rounded"
+    }
+  ) do |f| %>
 
     <%= render "users/shared/error_messages", resource: resource %>
 
     <div class="mb-4 mt-2">
       <%= f.label :email, class: "block font-bold text-gray-700 text-sm"%>
       <%= f.email_field :email,
-                                autofocus: true,
-                                autocomplete: "email",
-                                class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none mt-2" %>
+                        autofocus: true,
+                        autocomplete: "email",
+                        class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none mt-2"
+      %>
     </div>
 
     <div class="mb-4">
       <%= f.label '新しいパスワード', class: "block font-bold text-gray-700 text-sm" %> <p class='text-sm'>(変更しない場合は空欄のままにしてください。)</p>
       <%= f.password_field :password, autocomplete: "new-password", class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none mt-2" %>
-
     </div>
 
     <div class="mb-4">
       <%= f.label '新しいパスワード(確認用)', class: "block font-bold text-gray-700 text-sm"  %>
       <%= f.password_field :password_confirmation,
-                            autocomplete: "new-password",
-                            class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none mt-2"
-              %>
+                          autocomplete: "new-password",
+                          class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none mt-2"
+      %>
     </div>
 
-    <div class="mb-4">
+    <div class="mb-6">
       <%= f.label :current_password, class: "block font-bold text-gray-700 text-sm" %> <p class='text-sm'>(変更を反映させるには、現在のパスワードが必要です)</p>
       <%= f.password_field :current_password,
                             autocomplete: "current-password",
                             class: "appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none mt-2"
-              %>
+      %>
     </div>
 
     <div class="actions flex justify-center">
       <%= f.submit '更新', class: "button cursor-pointer bg-blue-800 hover:bg-blue-900 font-bold text-white focus:outline-none py-2 px-4 rounded" %>
     </div>
-  <% end %>
 
-  <%= link_to "戻る", :back , class: 'underline hover:no-underline'%>
+    <div class='mt-6'>
+      <%= link_to "戻る", :back , class: 'underline hover:no-underline'%>
+    </div>
+  <% end %>
 </div>
