--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,7 +7,7 @@
     as: resource_name,
     url: registration_path(resource_name),
     html: {
-            class: "bg-stone-100 mb-4 px-8 pt-6 pb-8 rounded"
+            class: "mb-4 px-8 pt-6 pb-8 rounded"
     }
   ) do |f| %>
 
@@ -47,6 +47,8 @@
       %>
     </div>
 
+    <div class='mt-10'>
+      <%= link_to 'キャンセル', root_path, class: 'underline text-sm hover:no-underline' %>
+    </div>
   <% end %>
-  <%= button_to 'キャンセル', root_path, method: :get, class: 'underline text-sm hover:no-underline' %>
 </div>
