--- a/app/views/lotteries/_form.html.slim
+++ b/app/views/lotteries/_form.html.slim
@@ -51,7 +51,7 @@
     button.w-36.h-10.rounded.py-2.px-2.mt-3.border.border-zinc-400.hover:border-zinc-600
       = link_to_add_association '＋賞品を追加', form, :prizes, data: { association_insertion_node: '.prizes', association_insertion_method: :append }
 
-    ul.flex.justify-center.list-none.mt-6
+    ul.flex.justify-center.list-none.my-6
       li
         = form.submit nil, class: 'cursor-pointer bg-blue-800 font-bold text-white rounded w-32 py-2 px-2 hover:bg-blue-900'
       li
