利用規約とプライバシーポリシーの幅を調整

--- a/app/views/welcome/terms.html.slim
+++ b/app/views/welcome/terms.html.slim
@@ -1,6 +1,6 @@
 - set_meta_tags(title: '利用規約', description: 'SmartLotteryの利用規約ページです。')
 
-.container.mt-6.p-2
+.container.mx-auto.mt-6.p-2.w-11/12.md:w-1/2
   h1.text-4xl.font-semibold.mb-6
     | 利用規約
   p.mb-4
@@ -8,7 +8,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第1条（適用）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本規約は，ユーザーと本サービスの利用に関わる一切の関係に適用されるものとします。
     li
@@ -18,12 +18,12 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第2条（利用登録）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本サービスにおいては，登録希望者が本規約に同意の上，本サービスの定める方法によって利用登録を申請し，本サービスがこれを承認することによって，利用登録が完了するものとします。
     li
       | 利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，その理由については一切の開示義務を負わないものとします。
-      ol.list-disc.ml-6.mb-2
+      ol.list-disc.ml-6.mb-2.list-inside
         li.mb-1
           | 利用登録の申請に際して虚偽の事項を届け出た場合
         li
@@ -33,7 +33,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第3条（ユーザーIDおよびパスワードの管理）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | ユーザーは、自己の責任において、本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
     li
@@ -43,7 +43,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第4条（利用料金および支払方法）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | ユーザーは本サービスを無料で利用することができます。そのため料金の支払いに関する取り決めは一切しません。
 
@@ -51,7 +51,7 @@
     | 第5条（禁止事項）
   p.mb-4
     | ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 法令または公序良俗に違反する行為
     li
@@ -85,7 +85,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第6条（本サービスの提供の停止等）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本サービスは，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
       ol.list-disc.ml-6.mb-2
@@ -102,10 +102,10 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第7条（利用制限および登録抹消）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本サービスは，ユーザーが以下のいずれかに該当する場合には，事前の通知なく，ユーザーに対して，本サービスの全部もしくは一部の利用を制限し，またはユーザーとしての登録を抹消することができるものとします。
-      ol.list-disc.ml-6.mb-2
+      ol.list-disc.ml-6.mb-2.list-inside
         li.mb-1
           | 本規約のいずれかの条項に違反した場合
         li
@@ -128,7 +128,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第9条（保証の否認および免責事項）
-  ol.list-decimal
+  ol.list-decimal.list-inside
     li.mb-2
       | 本サービスは，本サービスに事実上または法律上の瑕疵（安全性，信頼性，正確性，完全性，有効性，特定の目的への適合性，セキュリティなどに関する欠陥，エラーやバグ，権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
     li
@@ -138,7 +138,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第10条（サービス内容の変更等）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本サービスは，ユーザーに通知することなく，本サービスの内容を変更し，または本サービスの提供を中止することができるものとします。
     li
@@ -146,7 +146,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第11条（利用規約の変更）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本サービスは，必要と判断した場合には，ユーザーに通知することなく，本規約を変更することができるものとします。
     li
@@ -169,7 +169,7 @@
 
   h2.text-2xl.font-semibold.mt-6.mb-4
     | 第15条（準拠法・裁判管轄）
-  ol.list-decimal.mb-4
+  ol.list-decimal.mb-4.list-inside
     li.mb-2
       | 本規約の解釈にあたっては，日本法を準拠法とします。
     li
