simple_formatを使用して、改行を反映させた

--- a/app/views/lotteries/_lottery.html.slim
+++ b/app/views/lotteries/_lottery.html.slim
@@ -6,7 +6,7 @@
   .font-bold.mt-6.text-zinc-800.text-lg
     = Lottery.human_attribute_name(:description)
   .mt-3
-    = lottery.description
+    = simple_format(h(lottery.description))
   .font-bold.mt-6.text-zinc-800.text-lg
     | 応募フォームオプション
   .flex.items-center.mt-3
@@ -37,7 +37,7 @@
           label.w-1/2.md:w-1/3
             = "#{Prize.human_attribute_name(:winning_email_body)}:"
           .break-all.w-1/2.md:w-2/3
-            = prize.winning_email_body
+            = simple_format(h(prize.winning_email_body))
 
       - if lottery_executed?(lottery) && closed?(lottery)
         .mt-3
