--- a/app/views/win_mailer/win.html.slim
+++ b/app/views/win_mailer/win.html.slim
@@ -8,7 +8,7 @@ html
       br
       | ===============================================
     p
-      = @body
+      = simple_format(h(@body))
       br
     p
       | ※ 本メールは送信専用のメールアドレスで送信しております。
