--- a/app/views/win_mailer/win.text.erb
+++ b/app/views/win_mailer/win.text.erb
@@ -1,7 +1,7 @@
 <%=@name%>様
 ===============================================
 
-<%=@body%>
+<%= simple_format(h(@body)) %>
 
 ※ 本メールは送信専用のメールアドレスで送信しております。
     本メールに返信いただいてもご回答いたしかねますので、あらかじめご了承ください。
